crates/yokectl/tests/snapshots/help_snapshots__help_text_snapshots@top_level.snap
---
source: crates/yokectl/tests/help_snapshots.rs
expression: stdout
---
Command-line surface for the QuadStick (volume, config, install).

Usage: yokectl [OPTIONS] <COMMAND>

Commands:
  device            Print the current MountState: VID/PID, location-ID, mode hint, mount point
  debug             Emit a rich diagnostic snapshot of device, volume, and parser state
  watch             Stream MountState transitions and MountEvents as they arrive
  list              List profiles on the volume with name, kind, size, and modified time
  show              Pretty-print the parsed structure of a profile
  validate          Parse a profile and emit warnings and errors
  preferences       List preferences on a profile (effective view by default)
  pull              Copy a volume-backed profile to a local path
  push              Copy a local file to the volume
  copy              Copy a profile in place on the volume
  rename            Rename a profile in place on the volume
  delete            Delete a profile from the volume
  set-title         Set a profile's top-line title
  set-preference    Set a top-level preference (type inferred from the catalog)
  unset-preference  Remove a top-level preference
  set-override      Set a per-sub-profile preference override
  unset-override    Remove a per-sub-profile preference override
  set-binding       Bind an input phrase to an output in a sub-profile
  clear-binding     Remove a binding from a sub-profile
  set-modifier      Set the modifier on an existing binding in a sub-profile
  subprofile        Manage sub-profiles (add, delete, rename, clone)
  apply             Apply a batch of edit operations atomically
  bindings          List bindings on a profile, grouped by sub-profile
  install           Install a profile from a path, URL, or community-index name
  index             Query the community profile index
  catalog           Enumerate catalog values (inputs, outputs, preferences, modes, channels)
  completions       Print a shell-completion script to stdout
  docs              Generate man pages or a markdown reference under <DIR>
  manual            Open the upstream QuadStick user manual in the default browser
  topic             Show in-binary topic pages about configuration concepts
  help              Print this message or the help of the given subcommand(s)

Options:
      --fake-volume <FAKE_VOLUME>  Use a directory as a fake volume backend instead of the platform device
      --json                       Emit machine-readable JSON on stdout (NDJSON for watch)
  -v, --verbose...                 Increase tracing verbosity on stderr; repeat (-vv reveals info, -vvv debug)
      --no-color                   Disable ANSI styling (NO_COLOR=1 or non-TTY stdout also disable)
  -h, --help                       Print help
  -V, --version                    Print version
