crates/yokectl/tests/snapshots/help_snapshots__help_text_snapshots@topic.snap
---
source: crates/yokectl/tests/help_snapshots.rs
expression: stdout
---
Show in-binary topic pages about configuration concepts (binding model, sub-profiles, sip-puff thresholds, preferences, install sources). Bare invocation lists available topics; a slug emits the topic body as markdown. Under --json the result is wrapped in a JSON envelope instead.

Usage: yokectl topic [OPTIONS] [NAME]

Arguments:
  [NAME]
          Topic slug; omit to list available topics

Options:
      --fake-volume <FAKE_VOLUME>
          Use a directory as a fake volume backend instead of the platform device

      --json
          Emit machine-readable JSON on stdout (NDJSON for watch)

  -v, --verbose...
          Increase tracing verbosity on stderr; repeat (-vv reveals info, -vvv debug)

      --no-color
          Disable ANSI styling (NO_COLOR=1 or non-TTY stdout also disable)

  -h, --help
          Print help (see a summary with '-h')
