crates/yokectl/tests/snapshots/help_snapshots__help_text_snapshots@unset_override.snap
---
source: crates/yokectl/tests/help_snapshots.rs
expression: stdout
---
Remove a per-sub-profile preference override

Usage: yokectl unset-override [OPTIONS] <TARGET> <SUB_PROFILE> <KEY>

Arguments:
  <TARGET>       Profile name, file path, or '-' for stdin
  <SUB_PROFILE>  Sub-profile name
  <KEY>          Preference key

Options:
      --fake-volume <FAKE_VOLUME>  Use a directory as a fake volume backend instead of the platform device
      --json                       Emit machine-readable JSON on stdout (NDJSON for watch)
  -v, --verbose...                 Increase tracing verbosity on stderr; repeat (-vv reveals info, -vvv debug)
      --no-color                   Disable ANSI styling (NO_COLOR=1 or non-TTY stdout also disable)
  -h, --help                       Print help
