crates/yokectl/tests/snapshots/help_snapshots__help_text_snapshots@watch.snap
---
source: crates/yokectl/tests/help_snapshots.rs
expression: stdout
---
Stream MountState transitions and MountEvents as they arrive. Emits NDJSON under --json. --include-poll adds raw poll-tick events for forensics; it requires --json because the volume is too high to render usefully in human mode.

Usage: yokectl watch [OPTIONS]

Options:
      --fake-volume <FAKE_VOLUME>
          Use a directory as a fake volume backend instead of the platform device

      --include-poll
          Also emit raw poll-tick events (requires --json)

      --json
          Emit machine-readable JSON on stdout (NDJSON for watch)

  -v, --verbose...
          Increase tracing verbosity on stderr; repeat (-vv reveals info, -vvv debug)

      --no-color
          Disable ANSI styling (NO_COLOR=1 or non-TTY stdout also disable)

  -h, --help
          Print help (see a summary with '-h')
